<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="com.example.essian.businesscard.MainActivity">


    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/activity_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:contentDescription="@string/image_description"
                android:id="@+id/main_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:src="@drawable/sewing" />

            <TextView
                android:id="@+id/titleline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/main_image"
                android:gravity="center"
                android:text="@string/title"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/main_heading" />
        </RelativeLayout>

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="@dimen/padding"
            android:text="@string/description"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/sub_heading"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="openMap">

            <TextView
                android:id="@+id/address"
                style="@style/DetailText"
                android:text="@string/address" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@id/address"
                android:layout_alignLeft="@id/address"
                android:src="@drawable/ic_location_on_black_24dp"
                android:tint="@color/colorPrimary" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="dialPhoneNumber"
            android:paddingTop="@dimen/padding">            >

            <TextView
                android:id="@+id/phone"
                style="@style/DetailText"
                android:text="@string/phone" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/phone"
                android:src="@drawable/ic_phone_black_24dp"
                android:tint="@color/colorPrimary" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="sendEmail"
            android:paddingTop="@dimen/padding"
            android:paddingBottom="@dimen/padding">

            <TextView
                android:id="@+id/email"
                style="@style/DetailText"
                android:text="@string/email" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/email"
                android:src="@drawable/ic_email_black_24dp"
                android:tint="@color/colorPrimary" />
        </RelativeLayout>

    </LinearLayout>

</ScrollView>